# learn-databricks

./: .gitignore  DSPy Optimizers and MLflow Experiments Tracking.ipynb  Databricks Terraform Provider.sql  Git Credentials.sql  Meetups.sql  Photon.py  README.md  Table-Valued Functions.sql  What is Notebook.sql
Administration/: Databricks Administration.sql
Agentic AI Systems/: 00 Agentic AI Systems.py  AI Agent Fundamentals.py  Agent Skills.py  Databricks Tutorials with dbdemos.py  Rules & AGENTS.md.ipynb  Subagents.ipynb  WIP Agent Evaluation on Databricks.ipynb  WIP Forward-Deployed Engineer.py  WIP Get Started with AI Agents on Databricks.ipynb
Agentic Coding/: AI Agent Fundamentals.py  Agent Skills.py  Coding Agents.py  WIP AI Agent Fundamentals.py
Apache Spark/: ANTI and SEMI joins in SQL and DataFrame API.py  Bucketing.sql  Parameterized Queries.sql  Parquet Connector.scala  SparkSession across Python and Scala.py  Table-Valued Functions.sql
DSPy/: Build AI Agents with DSPy and MLflow on Databricks.ipynb  Build AI Agents with DSPy.ipynb  Demo Everyday English Editor.ipynb  Text Classifier DSPy Program.ipynb  Tracking DSPy Optimizers with MLflow.ipynb  WIP Chain-of-Thought Prompting.ipynb  WIP Multi-Turn Tool Conversations.ipynb  WIP Reflective Prompt Evolution with GEPA.ipynb  __Install Dependencies.ipynb  dspy.ChainOfThought — Chain-of-Thought Prompting Strategy.ipynb  dspy.ReAct - Reasoning and Acting.ipynb  dspy.ReAct.ipynb
Data Engineering/: Query JSON-Encoded Semi-Structured Data.py  What is Notebook.sql
Data Visualization/: Data Visualization on Databricks.py  Data Visualization.py
PySpark/pyspark-jupyter-poetry/: README.md  install-pyspark.md  pyproject.toml  pyspark.ipynb
demo/pydantic_workflow/: README.md  databricks.yml  pyproject.toml
demo/pydantic_workflow/resources/: pydantic_workflow.job.yml
demo/pydantic_workflow/src/: notebook.ipynb
demo/pydantic_workflow/src/pydantic_workflow/: trip.py
demo/pydantic_workflow/tests/: test_trip.py
(+254 files in other folders)
