[project]
name = "pydantic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pyspark>=3.5.4",
    "pytest>=8.3.4",
]

# https://docs.astral.sh/uv/concepts/projects/init/#packaged-applications
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"